2006-07-02  John W. Eaton  <jwe@octave.org>

	* ov-str-mat.cc (CHAR_MATRIX_CONV): Omit "warn-" from label.
	* parse.y (maybe_warn_variable_switch_label): Likewise.

2006-07-01  John W. Eaton  <jwe@octave.org>

	* parse.y (finish_cell): Use finish_matrix to do constant folding.

2006-06-30  John W. Eaton  <jwe@octave.org>

	* ov-base.cc (octave_base_value::numeric_assign):
	Avoid memory leak when converting LHS.

	* oct-hist.cc (do_history, initialize_history, Fhistory_file):
	Don't perform tilde expansion on history file name.

	* syscalls.cc (Flstat, Fstat): Don't perform tilde expansion on arg.
	* input.cc (Fread_readline_init_file): Likewise.
	* dirfns.cc (Fcd, Freaddir): Likewise.

	* load-path.cc (genpath): Don't perform tilde expansion on name.
	(load_path::do_add): Don't warn about moving "." to front of list.

2006-06-28  John W. Eaton  <jwe@octave.org>

	* load-path.cc (Faddpath): Don't treat "." specially here.
	Don't check directory status here.
	(Fpath): Handle all args.  Don't treat "." specially here.
	(Faddpath, Frmpath): Delete unused variable xpath.
	(load_path::do_add): New function.
	(load_path::do_prepend, load_path::do_append): Use it.
	(load_path::do_remove): Really prevent removal of ".".
	(load_path::do_clear): Clearing doesn't remove ".".
	(load_path::append, load_path::prepend, load_path::do_append,
	load_path::do_prepend): New arg, warn.

	* load-path.h: Fix decls.

	* DLD-FUNCTIONS/regexp.cc (octregexp_list):
	Avoid bug in older versions of g++.

2006-06-27  John W. Eaton  <jwe@octave.org>

	* Makefile.in (clean): Also remove $(DLD_OBJ).

	* sighandlers.cc (install_signal_handlers): Don't handle SIGPROF.
	From Geoffrey Knauth <geoff@knauth.org>.

2006-06-25  John W. Eaton  <jwe@octave.org>

	* mk-pkg-add: Avoid apparently non-portable sed patterns.

2006-06-21  John W. Eaton  <jwe@octave.org>

	* variables.cc (do_who): Handle mex.

	* symtab.cc (SYMBOL_DEF::type_as_string, SYMBOL_DEF::which,